@@ -1,6 +1,7 @@
 == Changelog ==
 
 = 1.6.8 - xx-xx-2020 =
+* Added - Introduce `get_multiple` method in `EVF_Form_Handler` to fetch multiple forms.
 * Fix - The field placeholder & default value 0 (zero) does not display on the frontend.
 * Tweak - Updated jQuery Validation JS library to v1.19.2.
 * Tweak - Add trigger `everest_forms_loaded` to notify plugins that the core was loaded.
